# rag-sample

./: .env  .gitignore  README.md  enhanced_rag copy.py  enhanced_rag.py  hybrid_rag_prompts.txt  langextract_gemini.py  langextract_gemini_rag.py  langextract_ollama.py  langextract_ollama_rag.py  main.py  prompt_templates.txt  prompt_templates_advanced.txt  pyproject.toml  sample_documents.txt
chroma_db/: chroma.sqlite3
