[project]
name = "rag-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-ollama>=0.3.6",
    "langchain-text-splitters>=0.3.9",
    "sentence-transformers>=5.0.0",
    "transformers>=4.54.1",
]
